# ml-project-generator

./: .gitignore  LICENSE  README.md  classifier.txt  manage_version.py  pyproject.toml  requirements.txt  setup.py
ml_project_generator/: __init__.py  main.py  project_creator.py
ml_project_generator.egg-info/: PKG-INFO  SOURCES.txt
test/: .gitignore  README.md
test/config/: config.yaml
test/src/: main.py
test/src/data/: preprocessing.py
test/src/models/: model.py
